Use correct colours for team member names in dark mode

--- a/src/theme/rd/_main.scss
+++ b/src/theme/rd/_main.scss
@@ -133,7 +133,7 @@ body {
 
   .team-member {
     background: linear-gradient(135deg, rgba(96, 160, 177, 0.8), rgba(25, 83, 98, 0.8));
-    color: white;
+    color: $accent-light;
   }
 
   a {
